@@ -61,6 +61,14 @@ Upgrading
       to be done anything upon upgrade. Furthermore, IMDS of version 2 can be configured to be required in AWS EC2 console.
       Consult cassandra-rackdc.properties for more details. (CASSANDRA-16555)
 
+Deprecation
+---------
+    - Chronicle Queue has changed the enums used for log rolling (cassandra.yaml -> full_query_logging_options:roll_cycle).
+    Older legacy options will still work for the foreseeable future but you will see warnings in logs and future dependency
+    upgrades may break your log rolling param. The default log rolling param will be changed with the next major release
+    from HOURLY to FAST_HOURLY, primarily different on how frequently indexes are built (256 in FAST_HOURLY vs. 16 in HOURLY).
+    For more info refer to: net.openhft.chronicle.queue.RollCycles
+
 4.0.8
 =====
 
